fixed embedded youtube videos on mobile

--- a/style.css
+++ b/style.css
@@ -106,3 +106,22 @@ a {
     margin-right: auto;
     width: 50%;
 }
+
+.embed-youtube {
+    position: relative;
+    padding-bottom: 56.25%; /* for a 16:9 aspect ratio */
+    padding-top: 30px;
+    height: 0;
+    overflow: hidden;
+}
+
+.embed-youtube iframe,
+.embed-youtube object,
+.embed-youtube embed {
+    border: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
